--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "vue-router": "^3.0.6",
         "vue-template-compiler": "^2.5.21",
         "vuex": "^3.1.1"
+    },
+    "dependencies": {
+        "shards-vue": "^1.0.7"
     }
 }
